test/e2e/fail_compile/generics/recursive_instantiation_limit.cst
struct Wrap<T> {
    value: T,
}

runtime fn source() -> num {
    0
}

fn expand<T>(value: T) -> num {
    expand(Wrap<T> { value: value })
}

fn main() -> num {
    expand(source())
}
